<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/first_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/last_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birth_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:background="?selectableItemBackground"
        android:text="@string/birth_date"
        android:textAppearance="@style/Text.Regular.16.PrimaryColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/address"
        android:textAppearance="@style/Text.Bold.18.PrimaryColor" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/city">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postal_code_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/postal_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postal_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/street_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/street">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/street_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/street_code_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/street_code">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/street_code_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_til"
        style="@style/CustomTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:hint="@string/country">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:textAppearance="@style/Text.Regular.16.PrimaryColor"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>