<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/toolbar_color"
            android:elevation="8dp"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/devices"
                android:textAppearance="@style/Text.Bold.24.PrimaryColor" />

            <ImageButton
                android:id="@+id/filter_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/bg_filter"
                android:contentDescription="@string/content_description"
                android:padding="4dp"
                android:src="@drawable/ic_filter" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_devices_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/user_devices_is_empty"
        android:visibility="invisible" />

    <com.nusratillo.testtask.ui.custom_view.load_state.PlaceHolder
        android:id="@+id/place_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp" />
</FrameLayout>